<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/Mon"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="Icon"
            android:scaleType="fitCenter"
            android:src="@drawable/sunny" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Sunny" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Tues"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rainy"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainy"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Wed"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rainy"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainy"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Thur"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/storm"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Storm"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Fri"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/sunny"
            android:scaleType="fitCenter"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunny"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Sat"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/sunny"
            android:scaleType="fitCenter"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sunny"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Sun"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/storm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Storm"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Mon"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/cloudy"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Cloudy" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Tues"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/rainy"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rainy"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:text="@string/Wed"
            android:gravity="center_vertical"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/storm"
            android:scaleType="fitCenter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Storm"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
    </LinearLayout>


</LinearLayout>
